--- a/pages/sossnach.html
+++ b/pages/sossnach.html
@@ -2,19 +2,17 @@
 
 <p>Et kascht tëschent 7 an 9€ pro Persoun.</p>
 
-<p>Mir verkafen um Départ an ennerwee Gedrénks a Gegrills.</p>
-
+<p>Mir verkafen um Depart an ënnerwee Gedrénks a Gegrills.</p>
 
 <p>
-  Mir machen dese Nuetsrallye, well et eis Spass mecht! Sot eis är Meenung, a
-  besicht och eis Facebook Säit: <a
+  Mir maachen dësen Nuetsrallye, well et eis Spaass mécht! Sot eis är Meenung,
+  a besicht och eis Facebook-Säit: <a
     href="https://www.facebook.com/pages/Lost-in-the-Darkness/320383008025958#">Lost
-  in the Darkness op Facebook</a>
+    in the Darkness op Facebook</a>
 </p>
 
 <p>
-  Alles wat mir fir de Nuetsrallye u Suen erakréien, gëtt integral un d’ONGD FNEL
-  gespendt!
+  Alles, wat mir fir den Nuetsrallye u Suen erakréien, gëtt integral un d’ONGD FNEL gespent!
 </p>
 
 <p>
